--- a/README.Rmd
+++ b/README.Rmd
@@ -10,11 +10,11 @@ output:
 
 In order to use this package, you need three things:
 
-1.  The *.csv-files of your course evaluations, which you can downlaod from insteval (-> Results -> Raw data). Please save all your *.csv-files in a single directory.
+1.  The *.csv-files of your course evaluations, which you can downlaod from insteval (insteval -> Results -> Raw data). Please save all your *.csv-files in a single directory.
 2.  R (which you can download from http://www.r-project.org)
 3.  The package `instevalR`
 
-The easiest way to install the package `instevalR` is the following:
+The easiest way to install the package `instevalR` is to install it directly from GitHub using `install_github()` from the package `devtools`:
 ```{r, echo = T, eval = F}
 install.packages("devtools")                      # if it's not already installed
 devtools::install_github("hplieninger/instevalR")
@@ -28,7 +28,7 @@ res.1 <- comb_eval(dat.1)                          # combine into single object
 plot_eval(res.1)                                   # do a plot
 ```
 
-Please send any bug reports, feature requests, or comments to `plieninger@uni-mannheim.de` (in English or German).
+Happy teaching. Please send any bug reports, feature requests, or comments to `plieninger@uni-mannheim.de` (in English or German).
 
 *****
 
