--- a/README.Rmd
+++ b/README.Rmd
@@ -8,7 +8,7 @@ output:
 
 `instevalR` is an R package under construction that is useful for people doing course evaluations (at universities, e.g., U Mannheim) with the software InstEvaL (https://insteval.uni-mannheim.de). The package has functions to combine the results of multiple course evaluations (e.g., different courses/cohorts of a single instructor) and to plot those results:
 
-```{r, echo = F, eval = T}
+```{r, echo = F, eval = T, fig.height=8, fig.width=14, out.height="4in", out.width="7in"}
 library("instevalR")
 set.seed(123)
 dat.x <- sim_eval(N.files = 5, N.id = 50)
@@ -22,7 +22,7 @@ In order to use this package, you need three things:
 2.  R (which you can download from http://www.r-project.org)
 3.  The package `instevalR`
 
-The easiest way to install the package `instevalR` is to install it directly from GitHub using `install_github()` from the package `devtools`:
+The easiest way to install the package `instevalR` is to install it directly from GitHub:
 ```{r, echo = T, eval = F}
 install.packages("devtools")                      # if it's not already installed
 devtools::install_github("hplieninger/instevalR")
