--- a/README.Rmd
+++ b/README.Rmd
@@ -6,6 +6,14 @@ output:
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
+```{r, echo = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>",
+  fig.path = "README-"
+)
+```
+
 `instevalR` is an R package under construction that is useful for people doing course evaluations (at universities, e.g., U Mannheim) with the software InstEvaL (https://insteval.uni-mannheim.de). The package has functions to combine the results of multiple course evaluations (e.g., different courses/cohorts of a single instructor) and to plot those results:
 
 ```{r, example-plot, echo = F, eval = T, dpi=300}
