--- a/README.Rmd
+++ b/README.Rmd
@@ -18,8 +18,8 @@ knitr::opts_chunk$set(
 
 ```{r, example-plot, echo = F, eval = T, dpi=300}
 library("instevalR")
-set.seed(123)
-dat.x <- sim_eval(N.files = 5, N.id = 50)
+set.seed(123456)
+dat.x <- sim_eval(N.files = 5, N.id = 100)
 res.x <- aggregate_eval(dat.x)
 plot_eval(res.x, ylim = c(1, 3))
 ```
@@ -32,7 +32,8 @@ In order to use this package, you need three things:
 
 The easiest way to install the package `instevalR` is to install it directly from GitHub:
 ```{r, echo = T, eval = F}
-install.packages("devtools")                      # if it's not already installed
+# install "devtools" unless you already have it, may take 1 or 2 minutes
+install.packages("devtools")
 devtools::install_github("hplieninger/instevalR")
 ```
 
